[gd_scene load_steps=12 format=3]

[ext_resource type="Script" path="res://scenes/world/WorldMap.gd" id="1_worldmap"]
[ext_resource type="PackedScene" path="res://actors/player/Player.tscn" id="2_player"]
[ext_resource type="Script" path="res://systems/interact/BuildingEntrance.gd" id="3_entrance"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_boundary"]
size = Vector2(1600, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_boundary_v"]
size = Vector2(40, 1200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_building"]
size = Vector2(100, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_door"]
size = Vector2(50, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tree"]
size = Vector2(20, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rock"]
size = Vector2(30, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_well"]
radius = 25.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_water"]
size = Vector2(200, 150)

[node name="WorldMap" type="Node2D"]
script = ExtResource("1_worldmap")

[node name="DayNightCycle" type="CanvasModulate" parent="."]
color = Color(1, 1, 1, 1)

[node name="Background" type="Node2D" parent="."]

[node name="Sky" type="ColorRect" parent="Background"]
z_index = -10
offset_right = 1600.0
offset_bottom = 1200.0
color = Color(0.08, 0.1, 0.15, 1)

[node name="Terrain" type="Node2D" parent="."]
z_index = -5

[node name="GrassBase" type="ColorRect" parent="Terrain"]
offset_right = 1600.0
offset_bottom = 1200.0
color = Color(0.15, 0.22, 0.12, 1)

[node name="CentralPlaza" type="ColorRect" parent="Terrain"]
offset_left = 450.0
offset_top = 100.0
offset_right = 1150.0
offset_bottom = 400.0
color = Color(0.2, 0.18, 0.15, 1)

[node name="PlazaStones" type="Node2D" parent="Terrain/CentralPlaza"]

[node name="Stone1" type="ColorRect" parent="Terrain/CentralPlaza/PlazaStones"]
offset_left = 50.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 100.0
color = Color(0.25, 0.22, 0.18, 1)

[node name="Stone2" type="ColorRect" parent="Terrain/CentralPlaza/PlazaStones"]
offset_left = 200.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 100.0
color = Color(0.23, 0.2, 0.16, 1)

[node name="Stone3" type="ColorRect" parent="Terrain/CentralPlaza/PlazaStones"]
offset_left = 350.0
offset_top = 50.0
offset_right = 450.0
offset_bottom = 100.0
color = Color(0.25, 0.22, 0.18, 1)

[node name="Stone4" type="ColorRect" parent="Terrain/CentralPlaza/PlazaStones"]
offset_left = 500.0
offset_top = 50.0
offset_right = 600.0
offset_bottom = 100.0
color = Color(0.23, 0.2, 0.16, 1)

[node name="Path1" type="ColorRect" parent="Terrain"]
offset_left = 750.0
offset_top = 400.0
offset_right = 850.0
offset_bottom = 800.0
color = Color(0.22, 0.18, 0.14, 1)

[node name="Path2" type="ColorRect" parent="Terrain"]
offset_left = 200.0
offset_top = 250.0
offset_right = 450.0
offset_bottom = 300.0
color = Color(0.22, 0.18, 0.14, 1)

[node name="Path3" type="ColorRect" parent="Terrain"]
offset_left = 1150.0
offset_top = 250.0
offset_right = 1400.0
offset_bottom = 300.0
color = Color(0.22, 0.18, 0.14, 1)

[node name="SouthPath" type="ColorRect" parent="Terrain"]
offset_left = 750.0
offset_top = 800.0
offset_right = 850.0
offset_bottom = 1100.0
color = Color(0.22, 0.18, 0.14, 1)

[node name="HerbGarden" type="ColorRect" parent="Terrain"]
offset_left = 50.0
offset_top = 100.0
offset_right = 350.0
offset_bottom = 350.0
color = Color(0.12, 0.25, 0.15, 1)

[node name="SacredGrove" type="ColorRect" parent="Terrain"]
offset_left = 1250.0
offset_top = 100.0
offset_right = 1550.0
offset_bottom = 350.0
color = Color(0.18, 0.15, 0.22, 1)

[node name="Pond" type="ColorRect" parent="Terrain"]
offset_left = 100.0
offset_top = 700.0
offset_right = 350.0
offset_bottom = 900.0
color = Color(0.15, 0.25, 0.35, 1)

[node name="PondShoreline" type="ColorRect" parent="Terrain"]
offset_left = 90.0
offset_top = 690.0
offset_right = 360.0
offset_bottom = 910.0
color = Color(0.2, 0.22, 0.18, 1)

[node name="MountainArea" type="ColorRect" parent="Terrain"]
offset_left = 1200.0
offset_top = 800.0
offset_right = 1550.0
offset_bottom = 1100.0
color = Color(0.3, 0.28, 0.25, 1)

[node name="Decorations" type="Node2D" parent="."]
z_index = -2

[node name="Trees" type="Node2D" parent="Decorations"]

[node name="Tree1" type="ColorRect" parent="Decorations/Trees"]
offset_left = 50.0
offset_top = 400.0
offset_right = 80.0
offset_bottom = 480.0
color = Color(0.2, 0.35, 0.15, 1)

[node name="Trunk1" type="ColorRect" parent="Decorations/Trees/Tree1"]
offset_left = 10.0
offset_top = 60.0
offset_right = 20.0
offset_bottom = 90.0
color = Color(0.3, 0.2, 0.12, 1)

[node name="Tree2" type="ColorRect" parent="Decorations/Trees"]
offset_left = 120.0
offset_top = 450.0
offset_right = 160.0
offset_bottom = 540.0
color = Color(0.18, 0.32, 0.14, 1)

[node name="Trunk2" type="ColorRect" parent="Decorations/Trees/Tree2"]
offset_left = 15.0
offset_top = 70.0
offset_right = 25.0
offset_bottom = 100.0
color = Color(0.28, 0.18, 0.1, 1)

[node name="Tree3" type="ColorRect" parent="Decorations/Trees"]
offset_left = 400.0
offset_top = 500.0
offset_right = 450.0
offset_bottom = 600.0
color = Color(0.22, 0.38, 0.16, 1)

[node name="Trunk3" type="ColorRect" parent="Decorations/Trees/Tree3"]
offset_left = 18.0
offset_top = 75.0
offset_right = 32.0
offset_bottom = 110.0
color = Color(0.32, 0.22, 0.12, 1)

[node name="Tree4" type="ColorRect" parent="Decorations/Trees"]
offset_left = 1100.0
offset_top = 450.0
offset_right = 1140.0
offset_bottom = 530.0
color = Color(0.2, 0.35, 0.15, 1)

[node name="Trunk4" type="ColorRect" parent="Decorations/Trees/Tree4"]
offset_left = 15.0
offset_top = 60.0
offset_right = 25.0
offset_bottom = 90.0
color = Color(0.3, 0.2, 0.12, 1)

[node name="Tree5" type="ColorRect" parent="Decorations/Trees"]
offset_left = 1450.0
offset_top = 500.0
offset_right = 1500.0
offset_bottom = 600.0
color = Color(0.18, 0.3, 0.2, 1)

[node name="Trunk5" type="ColorRect" parent="Decorations/Trees/Tree5"]
offset_left = 18.0
offset_top = 75.0
offset_right = 32.0
offset_bottom = 110.0
color = Color(0.25, 0.18, 0.1, 1)

[node name="Tree6" type="ColorRect" parent="Decorations/Trees"]
offset_left = 600.0
offset_top = 900.0
offset_right = 650.0
offset_bottom = 1000.0
color = Color(0.2, 0.35, 0.18, 1)

[node name="Trunk6" type="ColorRect" parent="Decorations/Trees/Tree6"]
offset_left = 18.0
offset_top = 75.0
offset_right = 32.0
offset_bottom = 110.0
color = Color(0.28, 0.2, 0.1, 1)

[node name="Tree7" type="ColorRect" parent="Decorations/Trees"]
offset_left = 950.0
offset_top = 950.0
offset_right = 1000.0
offset_bottom = 1050.0
color = Color(0.18, 0.32, 0.15, 1)

[node name="Trunk7" type="ColorRect" parent="Decorations/Trees/Tree7"]
offset_left = 18.0
offset_top = 75.0
offset_right = 32.0
offset_bottom = 110.0
color = Color(0.3, 0.2, 0.12, 1)

[node name="Rocks" type="Node2D" parent="Decorations"]

[node name="Rock1" type="ColorRect" parent="Decorations/Rocks"]
offset_left = 500.0
offset_top = 600.0
offset_right = 540.0
offset_bottom = 625.0
color = Color(0.35, 0.32, 0.3, 1)

[node name="Rock2" type="ColorRect" parent="Decorations/Rocks"]
offset_left = 1050.0
offset_top = 550.0
offset_right = 1085.0
offset_bottom = 575.0
color = Color(0.38, 0.35, 0.32, 1)

[node name="Rock3" type="ColorRect" parent="Decorations/Rocks"]
offset_left = 1300.0
offset_top = 850.0
offset_right = 1360.0
offset_bottom = 890.0
color = Color(0.4, 0.38, 0.35, 1)

[node name="Rock4" type="ColorRect" parent="Decorations/Rocks"]
offset_left = 1380.0
offset_top = 900.0
offset_right = 1430.0
offset_bottom = 935.0
color = Color(0.42, 0.4, 0.38, 1)

[node name="Rock5" type="ColorRect" parent="Decorations/Rocks"]
offset_left = 1250.0
offset_top = 920.0
offset_right = 1300.0
offset_bottom = 955.0
color = Color(0.38, 0.35, 0.33, 1)

[node name="HerbPlants" type="Node2D" parent="Decorations"]

[node name="Herb1" type="ColorRect" parent="Decorations/HerbPlants"]
offset_left = 80.0
offset_top = 150.0
offset_right = 95.0
offset_bottom = 180.0
color = Color(0.3, 0.5, 0.25, 1)

[node name="Herb2" type="ColorRect" parent="Decorations/HerbPlants"]
offset_left = 120.0
offset_top = 180.0
offset_right = 135.0
offset_bottom = 210.0
color = Color(0.35, 0.55, 0.28, 1)

[node name="Herb3" type="ColorRect" parent="Decorations/HerbPlants"]
offset_left = 160.0
offset_top = 140.0
offset_right = 175.0
offset_bottom = 170.0
color = Color(0.28, 0.48, 0.22, 1)

[node name="Herb4" type="ColorRect" parent="Decorations/HerbPlants"]
offset_left = 200.0
offset_top = 200.0
offset_right = 215.0
offset_bottom = 230.0
color = Color(0.32, 0.52, 0.25, 1)

[node name="Herb5" type="ColorRect" parent="Decorations/HerbPlants"]
offset_left = 250.0
offset_top = 160.0
offset_right = 265.0
offset_bottom = 190.0
color = Color(0.4, 0.5, 0.3, 1)

[node name="Herb6" type="ColorRect" parent="Decorations/HerbPlants"]
offset_left = 290.0
offset_top = 190.0
offset_right = 305.0
offset_bottom = 220.0
color = Color(0.25, 0.45, 0.2, 1)

[node name="SacredStones" type="Node2D" parent="Decorations"]

[node name="Monolith1" type="ColorRect" parent="Decorations/SacredStones"]
offset_left = 1300.0
offset_top = 150.0
offset_right = 1320.0
offset_bottom = 220.0
color = Color(0.25, 0.22, 0.3, 1)

[node name="Monolith2" type="ColorRect" parent="Decorations/SacredStones"]
offset_left = 1400.0
offset_top = 180.0
offset_right = 1420.0
offset_bottom = 250.0
color = Color(0.28, 0.25, 0.32, 1)

[node name="Monolith3" type="ColorRect" parent="Decorations/SacredStones"]
offset_left = 1480.0
offset_top = 160.0
offset_right = 1500.0
offset_bottom = 230.0
color = Color(0.22, 0.2, 0.28, 1)

[node name="CenterWell" type="ColorRect" parent="Decorations"]
offset_left = 775.0
offset_top = 225.0
offset_right = 825.0
offset_bottom = 275.0
color = Color(0.3, 0.28, 0.25, 1)

[node name="WellWater" type="ColorRect" parent="Decorations/CenterWell"]
offset_left = 8.0
offset_top = 8.0
offset_right = 42.0
offset_bottom = 42.0
color = Color(0.15, 0.25, 0.4, 1)

[node name="WorldBoundary" type="StaticBody2D" parent="."]
collision_layer = 1
collision_mask = 0

[node name="TopWall" type="CollisionShape2D" parent="WorldBoundary"]
position = Vector2(800, -20)
shape = SubResource("RectangleShape2D_boundary")

[node name="BottomWall" type="CollisionShape2D" parent="WorldBoundary"]
position = Vector2(800, 1220)
shape = SubResource("RectangleShape2D_boundary")

[node name="LeftWall" type="CollisionShape2D" parent="WorldBoundary"]
position = Vector2(-20, 600)
shape = SubResource("RectangleShape2D_boundary_v")

[node name="RightWall" type="CollisionShape2D" parent="WorldBoundary"]
position = Vector2(1620, 600)
shape = SubResource("RectangleShape2D_boundary_v")

[node name="TreeCollisions" type="StaticBody2D" parent="."]
collision_layer = 1
collision_mask = 0

[node name="TreeCol1" type="CollisionShape2D" parent="TreeCollisions"]
position = Vector2(65, 470)
shape = SubResource("RectangleShape2D_tree")

[node name="TreeCol2" type="CollisionShape2D" parent="TreeCollisions"]
position = Vector2(140, 525)
shape = SubResource("RectangleShape2D_tree")

[node name="TreeCol3" type="CollisionShape2D" parent="TreeCollisions"]
position = Vector2(425, 585)
shape = SubResource("RectangleShape2D_tree")

[node name="TreeCol4" type="CollisionShape2D" parent="TreeCollisions"]
position = Vector2(1120, 515)
shape = SubResource("RectangleShape2D_tree")

[node name="TreeCol5" type="CollisionShape2D" parent="TreeCollisions"]
position = Vector2(1475, 585)
shape = SubResource("RectangleShape2D_tree")

[node name="TreeCol6" type="CollisionShape2D" parent="TreeCollisions"]
position = Vector2(625, 985)
shape = SubResource("RectangleShape2D_tree")

[node name="TreeCol7" type="CollisionShape2D" parent="TreeCollisions"]
position = Vector2(975, 1035)
shape = SubResource("RectangleShape2D_tree")

[node name="RockCollisions" type="StaticBody2D" parent="."]
collision_layer = 1
collision_mask = 0

[node name="RockCol1" type="CollisionShape2D" parent="RockCollisions"]
position = Vector2(520, 612)
shape = SubResource("RectangleShape2D_rock")

[node name="RockCol2" type="CollisionShape2D" parent="RockCollisions"]
position = Vector2(1067, 562)
shape = SubResource("RectangleShape2D_rock")

[node name="RockCol3" type="CollisionShape2D" parent="RockCollisions"]
position = Vector2(1330, 870)
shape = SubResource("RectangleShape2D_rock")

[node name="RockCol4" type="CollisionShape2D" parent="RockCollisions"]
position = Vector2(1405, 917)
shape = SubResource("RectangleShape2D_rock")

[node name="RockCol5" type="CollisionShape2D" parent="RockCollisions"]
position = Vector2(1275, 937)
shape = SubResource("RectangleShape2D_rock")

[node name="WellCollision" type="StaticBody2D" parent="."]
collision_layer = 1
collision_mask = 0

[node name="WellCol" type="CollisionShape2D" parent="WellCollision"]
position = Vector2(800, 250)
shape = SubResource("CircleShape2D_well")

[node name="PondCollision" type="StaticBody2D" parent="."]
collision_layer = 1
collision_mask = 0

[node name="PondCol" type="CollisionShape2D" parent="PondCollision"]
position = Vector2(225, 800)
shape = SubResource("RectangleShape2D_water")

[node name="Buildings" type="Node2D" parent="."]
z_index = 1

[node name="ApothecaryBuilding" type="Node2D" parent="Buildings"]
position = Vector2(200, 280)

[node name="BuildingBody" type="StaticBody2D" parent="Buildings/ApothecaryBuilding"]
collision_layer = 1
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buildings/ApothecaryBuilding/BuildingBody"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_building")

[node name="Foundation" type="ColorRect" parent="Buildings/ApothecaryBuilding"]
z_index = -1
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = 45.0
color = Color(0.18, 0.14, 0.12, 1)

[node name="WallMain" type="ColorRect" parent="Buildings/ApothecaryBuilding"]
offset_left = -55.0
offset_top = -55.0
offset_right = 55.0
offset_bottom = 30.0
color = Color(0.25, 0.2, 0.18, 1)

[node name="Roof" type="ColorRect" parent="Buildings/ApothecaryBuilding"]
offset_left = -65.0
offset_top = -80.0
offset_right = 65.0
offset_bottom = -50.0
color = Color(0.25, 0.4, 0.22, 1)

[node name="RoofPeak" type="ColorRect" parent="Buildings/ApothecaryBuilding"]
offset_left = -40.0
offset_top = -95.0
offset_right = 40.0
offset_bottom = -75.0
color = Color(0.22, 0.35, 0.2, 1)

[node name="Chimney" type="ColorRect" parent="Buildings/ApothecaryBuilding"]
offset_left = 30.0
offset_top = -110.0
offset_right = 50.0
offset_bottom = -70.0
color = Color(0.35, 0.25, 0.2, 1)

[node name="Smoke1" type="ColorRect" parent="Buildings/ApothecaryBuilding/Chimney"]
offset_left = 5.0
offset_top = -15.0
offset_right = 12.0
offset_bottom = 0.0
color = Color(0.5, 0.5, 0.55, 0.5)

[node name="Smoke2" type="ColorRect" parent="Buildings/ApothecaryBuilding/Chimney"]
offset_left = 8.0
offset_top = -30.0
offset_right = 15.0
offset_bottom = -15.0
color = Color(0.55, 0.55, 0.6, 0.3)

[node name="Window1" type="ColorRect" parent="Buildings/ApothecaryBuilding"]
offset_left = -40.0
offset_top = -35.0
offset_right = -20.0
offset_bottom = -10.0
color = Color(0.5, 0.65, 0.4, 0.8)

[node name="Window2" type="ColorRect" parent="Buildings/ApothecaryBuilding"]
offset_left = 20.0
offset_top = -35.0
offset_right = 40.0
offset_bottom = -10.0
color = Color(0.5, 0.65, 0.4, 0.8)

[node name="Door" type="ColorRect" parent="Buildings/ApothecaryBuilding"]
offset_left = -15.0
offset_top = -5.0
offset_right = 15.0
offset_bottom = 30.0
color = Color(0.35, 0.25, 0.15, 1)

[node name="DoorFrame" type="ColorRect" parent="Buildings/ApothecaryBuilding"]
offset_left = -18.0
offset_top = -8.0
offset_right = 18.0
offset_bottom = -3.0
color = Color(0.3, 0.2, 0.12, 1)

[node name="SignBoard" type="ColorRect" parent="Buildings/ApothecaryBuilding"]
offset_left = -45.0
offset_top = -125.0
offset_right = 45.0
offset_bottom = -105.0
color = Color(0.35, 0.25, 0.18, 1)

[node name="NameLabel" type="Label" parent="Buildings/ApothecaryBuilding"]
offset_left = -50.0
offset_top = -128.0
offset_right = 50.0
offset_bottom = -103.0
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.95, 0.9, 0.8, 1)
text = "Apothecary"
horizontal_alignment = 1

[node name="HangingHerbs" type="Node2D" parent="Buildings/ApothecaryBuilding"]

[node name="Herb1" type="ColorRect" parent="Buildings/ApothecaryBuilding/HangingHerbs"]
offset_left = -55.0
offset_top = -50.0
offset_right = -50.0
offset_bottom = -25.0
color = Color(0.3, 0.5, 0.25, 0.9)

[node name="Herb2" type="ColorRect" parent="Buildings/ApothecaryBuilding/HangingHerbs"]
offset_left = 50.0
offset_top = -50.0
offset_right = 55.0
offset_bottom = -25.0
color = Color(0.35, 0.55, 0.28, 0.9)

[node name="EnterArea" type="Area2D" parent="Buildings/ApothecaryBuilding"]
position = Vector2(0, 55)
collision_layer = 2
collision_mask = 1
script = ExtResource("3_entrance")
interior_scene = "res://scenes/interiors/ApothecaryInterior.tscn"
entrance_id = "apothecary_main"
prompt_text = "[E] Enter Apothecary"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buildings/ApothecaryBuilding/EnterArea"]
shape = SubResource("RectangleShape2D_door")

[node name="PromptLabel" type="Label" parent="Buildings/ApothecaryBuilding/EnterArea"]
offset_left = -70.0
offset_top = 15.0
offset_right = 70.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 12
text = "[E] Enter Apothecary"
horizontal_alignment = 1
visible = false

[node name="ArchivistBuilding" type="Node2D" parent="Buildings"]
position = Vector2(800, 130)

[node name="BuildingBody" type="StaticBody2D" parent="Buildings/ArchivistBuilding"]
collision_layer = 1
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buildings/ArchivistBuilding/BuildingBody"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_building")

[node name="Foundation" type="ColorRect" parent="Buildings/ArchivistBuilding"]
z_index = -1
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = 45.0
color = Color(0.12, 0.12, 0.15, 1)

[node name="WallMain" type="ColorRect" parent="Buildings/ArchivistBuilding"]
offset_left = -55.0
offset_top = -55.0
offset_right = 55.0
offset_bottom = 30.0
color = Color(0.18, 0.18, 0.22, 1)

[node name="Roof" type="ColorRect" parent="Buildings/ArchivistBuilding"]
offset_left = -65.0
offset_top = -80.0
offset_right = 65.0
offset_bottom = -50.0
color = Color(0.25, 0.25, 0.35, 1)

[node name="RoofPeak" type="ColorRect" parent="Buildings/ArchivistBuilding"]
offset_left = -40.0
offset_top = -95.0
offset_right = 40.0
offset_bottom = -75.0
color = Color(0.22, 0.22, 0.32, 1)

[node name="Tower" type="ColorRect" parent="Buildings/ArchivistBuilding"]
offset_left = -20.0
offset_top = -130.0
offset_right = 20.0
offset_bottom = -80.0
color = Color(0.2, 0.2, 0.28, 1)

[node name="TowerRoof" type="ColorRect" parent="Buildings/ArchivistBuilding"]
offset_left = -25.0
offset_top = -145.0
offset_right = 25.0
offset_bottom = -125.0
color = Color(0.28, 0.28, 0.38, 1)

[node name="Window1" type="ColorRect" parent="Buildings/ArchivistBuilding"]
offset_left = -40.0
offset_top = -35.0
offset_right = -20.0
offset_bottom = -10.0
color = Color(0.5, 0.5, 0.7, 0.7)

[node name="Window2" type="ColorRect" parent="Buildings/ArchivistBuilding"]
offset_left = 20.0
offset_top = -35.0
offset_right = 40.0
offset_bottom = -10.0
color = Color(0.5, 0.5, 0.7, 0.7)

[node name="TowerWindow" type="ColorRect" parent="Buildings/ArchivistBuilding"]
offset_left = -8.0
offset_top = -120.0
offset_right = 8.0
offset_bottom = -100.0
color = Color(0.6, 0.6, 0.8, 0.7)

[node name="Door" type="ColorRect" parent="Buildings/ArchivistBuilding"]
offset_left = -15.0
offset_top = -5.0
offset_right = 15.0
offset_bottom = 30.0
color = Color(0.3, 0.3, 0.38, 1)

[node name="DoorFrame" type="ColorRect" parent="Buildings/ArchivistBuilding"]
offset_left = -18.0
offset_top = -8.0
offset_right = 18.0
offset_bottom = -3.0
color = Color(0.25, 0.25, 0.32, 1)

[node name="SignBoard" type="ColorRect" parent="Buildings/ArchivistBuilding"]
offset_left = -45.0
offset_top = -175.0
offset_right = 45.0
offset_bottom = -155.0
color = Color(0.28, 0.28, 0.35, 1)

[node name="NameLabel" type="Label" parent="Buildings/ArchivistBuilding"]
offset_left = -50.0
offset_top = -178.0
offset_right = 50.0
offset_bottom = -153.0
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.9, 0.9, 0.98, 1)
text = "Archivist"
horizontal_alignment = 1

[node name="EnterArea" type="Area2D" parent="Buildings/ArchivistBuilding"]
position = Vector2(0, 55)
collision_layer = 2
collision_mask = 1
script = ExtResource("3_entrance")
interior_scene = "res://scenes/interiors/ArchivistInterior.tscn"
entrance_id = "archivist_main"
prompt_text = "[E] Enter Archives"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buildings/ArchivistBuilding/EnterArea"]
shape = SubResource("RectangleShape2D_door")

[node name="PromptLabel" type="Label" parent="Buildings/ArchivistBuilding/EnterArea"]
offset_left = -70.0
offset_top = 15.0
offset_right = 70.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 12
text = "[E] Enter Archives"
horizontal_alignment = 1
visible = false

[node name="GatekeeperBuilding" type="Node2D" parent="Buildings"]
position = Vector2(1400, 280)

[node name="BuildingBody" type="StaticBody2D" parent="Buildings/GatekeeperBuilding"]
collision_layer = 1
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buildings/GatekeeperBuilding/BuildingBody"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_building")

[node name="Foundation" type="ColorRect" parent="Buildings/GatekeeperBuilding"]
z_index = -1
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = 45.0
color = Color(0.15, 0.1, 0.14, 1)

[node name="WallMain" type="ColorRect" parent="Buildings/GatekeeperBuilding"]
offset_left = -55.0
offset_top = -55.0
offset_right = 55.0
offset_bottom = 30.0
color = Color(0.22, 0.15, 0.2, 1)

[node name="Roof" type="ColorRect" parent="Buildings/GatekeeperBuilding"]
offset_left = -65.0
offset_top = -80.0
offset_right = 65.0
offset_bottom = -50.0
color = Color(0.35, 0.2, 0.28, 1)

[node name="RoofPeak" type="ColorRect" parent="Buildings/GatekeeperBuilding"]
offset_left = -40.0
offset_top = -95.0
offset_right = 40.0
offset_bottom = -75.0
color = Color(0.32, 0.18, 0.25, 1)

[node name="Spire" type="ColorRect" parent="Buildings/GatekeeperBuilding"]
offset_left = -8.0
offset_top = -130.0
offset_right = 8.0
offset_bottom = -90.0
color = Color(0.4, 0.25, 0.32, 1)

[node name="SpireOrb" type="ColorRect" parent="Buildings/GatekeeperBuilding"]
offset_left = -6.0
offset_top = -142.0
offset_right = 6.0
offset_bottom = -130.0
color = Color(0.8, 0.5, 0.6, 0.9)

[node name="Window1" type="ColorRect" parent="Buildings/GatekeeperBuilding"]
offset_left = -40.0
offset_top = -35.0
offset_right = -20.0
offset_bottom = -10.0
color = Color(0.7, 0.45, 0.55, 0.7)

[node name="Window2" type="ColorRect" parent="Buildings/GatekeeperBuilding"]
offset_left = 20.0
offset_top = -35.0
offset_right = 40.0
offset_bottom = -10.0
color = Color(0.7, 0.45, 0.55, 0.7)

[node name="Door" type="ColorRect" parent="Buildings/GatekeeperBuilding"]
offset_left = -15.0
offset_top = -5.0
offset_right = 15.0
offset_bottom = 30.0
color = Color(0.38, 0.22, 0.28, 1)

[node name="DoorFrame" type="ColorRect" parent="Buildings/GatekeeperBuilding"]
offset_left = -18.0
offset_top = -8.0
offset_right = 18.0
offset_bottom = -3.0
color = Color(0.32, 0.18, 0.24, 1)

[node name="SignBoard" type="ColorRect" parent="Buildings/GatekeeperBuilding"]
offset_left = -45.0
offset_top = -170.0
offset_right = 45.0
offset_bottom = -150.0
color = Color(0.38, 0.22, 0.28, 1)

[node name="NameLabel" type="Label" parent="Buildings/GatekeeperBuilding"]
offset_left = -50.0
offset_top = -173.0
offset_right = 50.0
offset_bottom = -148.0
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.98, 0.85, 0.9, 1)
text = "Gatekeeper"
horizontal_alignment = 1

[node name="Sigil1" type="ColorRect" parent="Buildings/GatekeeperBuilding"]
offset_left = -60.0
offset_top = -50.0
offset_right = -50.0
offset_bottom = -40.0
color = Color(0.6, 0.35, 0.45, 0.7)

[node name="Sigil2" type="ColorRect" parent="Buildings/GatekeeperBuilding"]
offset_left = 50.0
offset_top = -50.0
offset_right = 60.0
offset_bottom = -40.0
color = Color(0.6, 0.35, 0.45, 0.7)

[node name="EnterArea" type="Area2D" parent="Buildings/GatekeeperBuilding"]
position = Vector2(0, 55)
collision_layer = 2
collision_mask = 1
script = ExtResource("3_entrance")
interior_scene = "res://scenes/interiors/GatekeeperInterior.tscn"
entrance_id = "gatekeeper_main"
prompt_text = "[E] Enter Gateway"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buildings/GatekeeperBuilding/EnterArea"]
shape = SubResource("RectangleShape2D_door")

[node name="PromptLabel" type="Label" parent="Buildings/GatekeeperBuilding/EnterArea"]
offset_left = -70.0
offset_top = 15.0
offset_right = 70.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 12
text = "[E] Enter Gateway"
horizontal_alignment = 1
visible = false

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(800, 500)

[node name="UI" type="CanvasLayer" parent="."]

[node name="LogPanel" type="PanelContainer" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -150.0
offset_right = 340.0
offset_bottom = -10.0
grow_vertical = 0

[node name="LogVBox" type="VBoxContainer" parent="UI/LogPanel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="LogTitleLabel" type="Label" parent="UI/LogPanel/LogVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "World Log:"

[node name="LogTextLabel" type="Label" parent="UI/LogPanel/LogVBox"]
custom_minimum_size = Vector2(310, 80)
layout_mode = 2
text = "The sanctuary awaits. Explore the realm..."
autowrap_mode = 2

[node name="VisitCountLabel" type="Label" parent="UI/LogPanel/LogVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Apothecary: 0 | Archivist: 0 | Gatekeeper: 0"

[node name="PlayerInfoPanel" type="PanelContainer" parent="UI"]
anchors_preset = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 220.0
offset_bottom = 100.0

[node name="InfoVBox" type="VBoxContainer" parent="UI/PlayerInfoPanel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="NameLabel" type="Label" parent="UI/PlayerInfoPanel/InfoVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Name"

[node name="ArchetypeLabel" type="Label" parent="UI/PlayerInfoPanel/InfoVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Archetype"

[node name="VowLabel" type="Label" parent="UI/PlayerInfoPanel/InfoVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "\"Vow\""

[node name="AreaPanel" type="PanelContainer" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 10.0
offset_right = 80.0
offset_bottom = 45.0
grow_horizontal = 2

[node name="AreaLabel" type="Label" parent="UI/AreaPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Central Plaza"
horizontal_alignment = 1

[node name="ControlsHint" type="Label" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "WASD: Move | E/Space: Interact"
horizontal_alignment = 2
